[gd_scene load_steps=12 format=3 uid="uid://c14ymhav7xwq4"]

[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_bxvxy"]
[ext_resource type="FontFile" uid="uid://b3qf8xclgupjj" path="res://Font Files/Main Font/TitilliumWeb-Light.ttf" id="1_dxlh1"]
[ext_resource type="FontFile" uid="uid://cx5us2v12cc34" path="res://Font Files/Title Font.ttf" id="2_ahnoh"]
[ext_resource type="Texture2D" uid="uid://b77jxnkryx2aa" path="res://Free Assets/PNG/Upgrade/Window.png" id="2_rtonk"]
[ext_resource type="Script" path="res://Scripts/volume_control.gd" id="4_ypq6e"]
[ext_resource type="AudioStream" uid="uid://c0iv4alpbig0r" path="res://Sound Files/ButtonClick.wav" id="6_laxim"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wppnu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wuuic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bkakb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_41aru"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xnprw"]

[node name="SettingsMenu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxvxy")

[node name="SettingsSprite" type="Sprite2D" parent="."]
position = Vector2(960, 536.469)
scale = Vector2(0.66516, 0.75933)
texture = ExtResource("2_rtonk")

[node name="SettingsBG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 666.0
offset_top = 120.0
offset_right = 1254.0
offset_bottom = 1046.0
color = Color(0.0666667, 0.0980392, 0.235294, 0)

[node name="OptionsMargin" type="MarginContainer" parent="SettingsBG"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -130.0
offset_right = 115.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="OptionsVbox" type="VBoxContainer" parent="SettingsBG/OptionsMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AudioButton" type="Button" parent="SettingsBG/OptionsMargin/OptionsVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Audio"

[node name="DisplayButton" type="Button" parent="SettingsBG/OptionsMargin/OptionsVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Display"

[node name="ControlsButton" type="Button" parent="SettingsBG/OptionsMargin/OptionsVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Controls"

[node name="DisplayMargin" type="MarginContainer" parent="SettingsBG"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DisplayVbox" type="VBoxContainer" parent="SettingsBG/DisplayMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AudioButton" type="Button" parent="SettingsBG/DisplayMargin/DisplayVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Audio"

[node name="RichTextLabel" type="RichTextLabel" parent="SettingsBG/DisplayMargin/DisplayVbox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_ahnoh")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center][u]DISPLAY[/u][center]"
fit_content = true
scroll_active = false

[node name="FullscreenCheckbox" type="CheckBox" parent="SettingsBG/DisplayMargin/DisplayVbox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_fonts/font = ExtResource("1_dxlh1")
theme_override_font_sizes/font_size = 20
text = "Fullscreen"

[node name="ResolutionLabel" type="Label" parent="SettingsBG/DisplayMargin/DisplayVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dxlh1")
theme_override_font_sizes/font_size = 20
text = "Resolution
"

[node name="ResolutionButton" type="OptionButton" parent="SettingsBG/DisplayMargin/DisplayVbox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ControlsButton" type="Button" parent="SettingsBG/DisplayMargin/DisplayVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Controls"

[node name="ControlsMargin" type="MarginContainer" parent="SettingsBG"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ControlsVbox" type="VBoxContainer" parent="SettingsBG/ControlsMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AudioButton" type="Button" parent="SettingsBG/ControlsMargin/ControlsVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Audio"

[node name="DisplayButton" type="Button" parent="SettingsBG/ControlsMargin/ControlsVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Display"

[node name="ControlsLabel" type="RichTextLabel" parent="SettingsBG/ControlsMargin/ControlsVbox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_ahnoh")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center][u]CONTROLS[/u][center]"
fit_content = true
scroll_active = false

[node name="BindingContainer" type="VBoxContainer" parent="SettingsBG/ControlsMargin/ControlsVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="ResetButton" type="Button" parent="SettingsBG/ControlsMargin/ControlsVbox"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_dxlh1")
theme_override_font_sizes/font_size = 30
text = "Reset to Default"

[node name="VolumeControl" type="Control" parent="SettingsBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 12.0
offset_right = 13.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_ypq6e")

[node name="VolumeMargin" type="MarginContainer" parent="SettingsBG/VolumeControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VolumeVbox" type="VBoxContainer" parent="SettingsBG/VolumeControl/VolumeMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RichTextLabel" type="RichTextLabel" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_ahnoh")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center][u]AUDIO[/u][center]"
fit_content = true
scroll_active = false

[node name="MasterLabel" type="Label" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dxlh1")
theme_override_font_sizes/font_size = 20

[node name="MasterSlider" type="HSlider" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dxlh1")
theme_override_font_sizes/font_size = 20

[node name="SFXSlider" type="HSlider" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicLabel" type="Label" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dxlh1")
theme_override_font_sizes/font_size = 20

[node name="MusicSlider" type="HSlider" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="DisplayButton" type="Button" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Display"

[node name="ControlsButton" type="Button" parent="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("2_ahnoh")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_wppnu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wuuic")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bkakb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_41aru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xnprw")
text = "Controls"

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_laxim")
volume_db = -5.0
bus = &"SFX"

[connection signal="pressed" from="SettingsBG/OptionsMargin/OptionsVbox/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="SettingsBG/OptionsMargin/OptionsVbox/DisplayButton" to="." method="_on_display_button_pressed"]
[connection signal="pressed" from="SettingsBG/OptionsMargin/OptionsVbox/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="SettingsBG/DisplayMargin/DisplayVbox/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="toggled" from="SettingsBG/DisplayMargin/DisplayVbox/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="item_selected" from="SettingsBG/DisplayMargin/DisplayVbox/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="pressed" from="SettingsBG/DisplayMargin/DisplayVbox/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="SettingsBG/ControlsMargin/ControlsVbox/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="SettingsBG/ControlsMargin/ControlsVbox/DisplayButton" to="." method="_on_display_button_pressed"]
[connection signal="pressed" from="SettingsBG/ControlsMargin/ControlsVbox/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="confirmAudio" from="SettingsBG/VolumeControl" to="." method="_on_volume_control_confirm_audio"]
[connection signal="value_changed" from="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox/MasterSlider" to="SettingsBG/VolumeControl" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox/SFXSlider" to="SettingsBG/VolumeControl" method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox/MusicSlider" to="SettingsBG/VolumeControl" method="_on_music_slider_value_changed"]
[connection signal="pressed" from="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox/DisplayButton" to="." method="_on_display_button_pressed"]
[connection signal="pressed" from="SettingsBG/VolumeControl/VolumeMargin/VolumeVbox/ControlsButton" to="." method="_on_controls_button_pressed"]
